--- a/app/index.html
+++ b/app/index.html
@@ -29,22 +29,6 @@
     <link rel="stylesheet" href="/css/main.css">
     <!-- endinject -->
     <!-- endbuild -->
-    <!-- Smartsupp Live Chat script -->
-    <script type="text/javascript">var _smartsupp = _smartsupp || {};
-    _smartsupp.key = 'db3cb0c6f69ab5b0b611e01a1b4eb25832c8f25a';
-    window.smartsupp || (function (d) {
-        var s, c, o = smartsupp = function () {
-            o._.push(arguments)
-        };
-        o._ = [];
-        s = d.getElementsByTagName('script')[0];
-        c = d.createElement('script');
-        c.type = 'text/javascript';
-        c.charset = 'utf-8';
-        c.async = true;
-        c.src = '//www.smartsuppchat.com/loader.js?';
-        s.parentNode.insertBefore(c, s);
-    })(document);</script>
 </head>
 <body>
 <!--[if	lt	IE	8]>
@@ -151,7 +135,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a ui-sref="projects({kind: 'project'})">Deporte</a>
+                        <a ui-sref="sports">Deporte</a>
                     </li>
                     <li>
                         <a ui-sref="page({slug: 'nosotros'})">Blog</a>
