--- a/app/index.html
+++ b/app/index.html
@@ -163,49 +163,7 @@
 </div>
 
 <footer id="footer_area">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="company_address">
-                    <h2>Información de la empresa</h2>
-
-                    <h3>
-                        <a class="footer-links" href="#">Acerca de Blue Mía</a><br/><br/>
-                        <a class="footer-links" href="#">Términos y condicione</a><br/><br/>
-                        <a ui-sref="contact" class="footer-links">Aviso de privacidad</a>
-                    </h3>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="company_address">
-                    <h2>Información de la empresa</h2>
-
-                    <h3>
-                        <a class="footer-links" href="#">Envío</a><br/><br/>
-                        <a class="footer-links" href="#">¿Cómo comprar?</a><br/><br/>
-                        <a ui-sref="contact" class="footer-links">Pago</a>
-                    </h3>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="company_address">
-                    <h2>Información de la empresa</h2>
-
-                    <h3>
-                        <a class="footer-links" href="#">¿Qué usar para el gym?</a><br/><br/>
-                        <a class="footer-links" href="#">Comodidad ante todo</a><br/><br/>
-                        <a ui-sref="contact" class="footer-links">¿Por qué Blue Mía?</a>
-                    </h3>
-                </div>
-            </div>
-        </div>
-    </div>
-    <hr class="divider_footer"/>
-    <div class="container">
-        <div class="text-center">
-            Diseño y desarrollo 2016 por <a class="footer-links" href="http://www.tingsystems.com/">Tingsystems</a>
-        </div>
-    </div>
+    <ng-include src="'/templates/partials/footer.html'"></ng-include>
 </footer>
 <!-- build:js js/vendor.min.js -->
 <!-- bower:js -->
