--- a/app/index.html
+++ b/app/index.html
@@ -174,6 +174,7 @@
 <script src="lib/lightbox2/dist/js/lightbox.js"></script>
 <script src="lib/angular-animate/angular-animate.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="lib/ng-repeat-owl-carousel/dist/ngRepeatOwlCarousel.min.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
