--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="header-mainmenu">
-                <ul class="main-nav nav navbar-nav navbar-right">
+                <ul class="main-nav nav navbar-nav navbar-right" ng-if="ShopMode">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false"><i class="fa fa-question-circle fa-2x"></i></a>
@@ -112,7 +112,7 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class=" nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">Ropa <span class="caret"></span></a>
