--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="lib/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="lib/owl.carousel/dist/assets/owl.carousel.css" />
     <link rel="stylesheet" href="lib/lightbox2/dist/css/lightbox.css" />
+    <link rel="stylesheet" href="lib/angular-block-ui/dist/angular-block-ui.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -175,6 +176,7 @@
 <script src="lib/angular-animate/angular-animate.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/ng-repeat-owl-carousel/dist/ngRepeatOwlCarousel.min.js"></script>
+<script src="lib/angular-block-ui/dist/angular-block-ui.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
