--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
                         <a ui-sref="sports">Nosotros</a>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                        <a uib-dropdown-toggle class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">Productos <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li ng-repeat="item in ropa"><a ui-sref="category({slug: item.slug})">{{ item.name }}</a>
