--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title ng-bind="pageTitle">Blue Mia - Especialistas en ropa deportiva para Dama</title>
+    <title ng-bind="pageTitle">Remolques Magu - Trabajo y material de calidad</title>
     <meta name="keywords"
           content="Especialistas en ropa deportiva para Dama">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
@@ -21,7 +21,6 @@
     <link rel="stylesheet" href="lib/animate.css/animate.css" />
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="lib/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="lib/owl.carousel/dist/assets/owl.carousel.css" />
     <link rel="stylesheet" href="lib/lightbox2/dist/css/lightbox.css" />
     <link rel="stylesheet" href="lib/angular-block-ui/dist/angular-block-ui.css" />
@@ -67,7 +66,7 @@
                         <a uib-dropdown-toggle class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">Productos <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li ng-repeat="item in ropa"><a ui-sref="category({slug: item.slug})">{{ item.name }}</a>
+                            <li ng-repeat="item in mainNavMenu"><a ui-sref="category_product({slug: item.slug})">{{ item.name }}</a>
                             </li>
                         </ul>
                     </li>
@@ -103,10 +102,8 @@
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-<script src="lib/wow/dist/wow.js"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
-<script src="lib/angular-loading-bar/build/loading-bar.js"></script>
 <script src="lib/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
 <script src="lib/owl.carousel/dist/owl.carousel.js"></script>
 <script src="lib/angular-deckgrid/angular-deckgrid.js"></script>
@@ -123,6 +120,7 @@
 <script src="/js/controllers.js"></script>
 <script src="/js/custom.js"></script>
 <script src="/js/directives.js"></script>
+<script src="/js/filters.js"></script>
 <script src="/js/services.js"></script>
 <script src="/js/templates.js"></script>
 <!-- endinject -->
