--- a/app/index.html
+++ b/app/index.html
@@ -57,10 +57,10 @@
             <div class="collapse navbar-collapse" id="header-mainmenu">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a ui-sref="Home">Inicio</a>
+                        <a ui-sref="home">Inicio</a>
                     </li>
                     <li>
-                        <a ui-sref="sports">Nosotros</a>
+                        <a ui-sref="page({slug:'nosotros1464059034'})">Nosotros</a>
                     </li>
                     <li class="dropdown">
                         <a uib-dropdown-toggle class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
