--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="img/ico/apple-touch-icon-57-precomposed.png">
-<!-- Schema.org markup for Google+ -->
+    <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="{{ post.title }}" ng-if="post">
     <meta itemprop="description" content="{{ post.excerpt }}" ng-if="post">
     <meta itemprop="image" content="{{ post.urlImages.original }}" ng-if=" post">
@@ -34,7 +34,7 @@
           content="{{ post.urlImages.original }}"
           ng-if="post"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://www.naturaceutics.mx{{ $state.href($state.current.name) }}"/>
+    <meta property="og:url" content="http://www.remolquesmagu.com{{ $state.href($state.current.name) }}"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
@@ -44,6 +44,7 @@
     <link rel="stylesheet" href="lib/owl.carousel/dist/assets/owl.carousel.css" />
     <link rel="stylesheet" href="lib/lightbox2/dist/css/lightbox.css" />
     <link rel="stylesheet" href="lib/angular-block-ui/dist/angular-block-ui.css" />
+    <link rel="stylesheet" href="lib/angular-toasty/dist/angular-toasty.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -83,10 +84,12 @@
                         <a ui-sref="page({slug:'nosotros1464059034'})">Nosotros</a>
                     </li>
                     <li class="dropdown">
-                        <a uib-dropdown-toggle class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                        <a uib-dropdown-toggle class="dropdown-toggle" data-toggle="dropdown" role="button"
+                           aria-haspopup="true"
                            aria-expanded="false">Productos <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li ng-repeat="item in mainNavMenu"><a ui-sref="category_product({slug: item.slug})">{{ item.name }}</a>
+                            <li ng-repeat="item in mainNavMenu"><a
+                                    ui-sref="category_product({slug: item.slug})">{{ item.name }}</a>
                             </li>
                         </ul>
                     </li>
@@ -132,6 +135,7 @@
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/ng-repeat-owl-carousel/dist/ngRepeatOwlCarousel.min.js"></script>
 <script src="lib/angular-block-ui/dist/angular-block-ui.js"></script>
+<script src="lib/angular-toasty/dist/angular-toasty.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
@@ -157,5 +161,6 @@
         m.parentNode.insertBefore(a, m)
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 </script>
+<toasty></toasty>
 </body>
 </html>
