--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
             <div class="collapse navbar-collapse" id="header-mainmenu">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a ui-sref="page({slug:'nosotros1464059034'})">Nosotros</a>
+                        <a ui-sref="page({slug:'nosotros1464721951'})">Nosotros</a>
                     </li>
                     <li class="dropdown">
                         <a uib-dropdown-toggle class="dropdown-toggle" data-toggle="dropdown" role="button"
@@ -86,18 +86,18 @@
                            aria-expanded="false">Nuestros proyectos <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li ng-repeat="item in mainNavMenu"><a
-                                    ui-sref="category_product({slug: item.slug})">{{ item.name }}</a>
+                                    ui-sref="category_project({slug: item.slug})">{{ item.name }}</a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a ui-sref="blog({kind: 'post'})">Planes de pago</a>
+                        <a ui-sref="payment_plans">Planes de pago</a>
                     </li>
                     <li>
-                        <a ui-sref="blog({kind: 'post'})">Blog</a>
+                        <a ui-sref="blog">Blog</a>
                     </li>
                     <li>
-                        <a ui-sref="contact({kind: 'contact'})">Contacto</a>
+                        <a ui-sref="contact">Contacto</a>
                     </li>
                 </ul>
             </div>
