--- a/app/index.html
+++ b/app/index.html
@@ -78,28 +78,26 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="header-mainmenu">
                 <ul class="nav navbar-nav navbar-right">
-
-                    <li class="dropdown">
-                        <a uib-dropdown-toggle class="dropdown-toggle" data-toggle="dropdown" role="button"
-                           aria-haspopup="true"
-                           aria-expanded="false">Nuestros proyectos <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li ng-repeat="item in mainNavMenu"><a
-                                    ui-sref="category_project({slug: item.slug})">{{ item.name }}</a>
-                            </li>
-                        </ul>
+                    <li>
+                        <a href="#who-are">Nosotros</a>
                     </li>
                     <li>
-                        <a ui-sref="payment_plans">Planes de pago</a>
+                        <a href="#services">Servicios</a>
                     </li>
                     <li>
-                        <a ui-sref="page({slug:'nosotros1464721951'})">Nosotros</a>
+                        <a href="#politics">Nuestra política</a>
                     </li>
                     <li>
-                        <a ui-sref="blog">Blog</a>
+                        <a href="#contract">Porqué contratarnos</a>
+                    </li>
+                   <li>
+                        <a ui-sref="page({slug:'nosotros1464721951'})">Porqué contratarnos</a>
                     </li>
                     <li>
-                        <a ui-sref="contact">Contacto</a>
+                        <a href="#presence">Presencia</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -152,7 +150,6 @@
 <!-- endinject -->
 <!-- endbuild -->
 <script>(function (i, s, o, g, r, a, m) {i['GoogleAnalyticsObject'] = r;i[r] = i[r] || function () {(i[r].q = i[r].q || []).push(arguments)}, i[r].l = 1 * new Date();a = s.createElement(o), m = s.getElementsByTagName(o)[0];a.async = 1;a.src = g;m.parentNode.insertBefore(a, m)})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');</script>
-<script type="text/javascript">var _smartsupp = _smartsupp || {};_smartsupp.key = '015c0fc038526ccd46c1d9d2e76f62904084f2b8';window.smartsupp||(function(d) {var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];s=d.getElementsByTagName('script')[0];c=d.createElement('script');c.type='text/javascript';c.charset='utf-8';c.async=true;c.src='//www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);})(document);</script>
 <toasty></toasty>
 </body>
 </html>
