--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
 
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                <button type="button" class="navbar-toggle" data-target="#header-mainmenu" data-toggle="collapse"
                         ng-click="nav.isCollapsed = !nav.isCollapsed">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
