--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="es" ng-app="annalise">
+
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title ng-bind="pageTitle">Corriente Alterna</title>
     <meta name="description" content="{{ post.excerpt }}">
-    <meta name="keywords"
-          content="">
+    <meta name="keywords" content="">
     <meta name="theme-color" content="{{ initConfig.meta_color }}">
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <base href="/">
     <!--Favicon-->
     <link href="img/ico/favicon.ico" rel="shortcut icon" type="favicon">
@@ -25,21 +25,17 @@
     <meta name="twitter:title" content="{{ post.title }}" ng-if="post">
     <meta name="twitter:description" content="{{ post.excerpt }}" ng-if="post">
     <!-- Twitter summary card with large image must be at least 280x150px -->
-    <meta name="twitter:image:src"
-          content="{{ post.urlImages.original }}"
-          ng-if="post">
+    <meta name="twitter:image:src" content="{{ post.urlImages.original }}" ng-if="post">
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="{{ post.title }}" ng-if="post"/>
-    <meta property="og:description" content="{{ post.excerpt }}" ng-if="post"/>
-    <meta property="og:image"
-          content="{{ post.urlImages.original }}"
-          ng-if="post"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://www.corriente-alterna.com{{ $state.href($state.current.name) }}"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet"/>
+    <meta property="og:title" content="{{ post.title }}" ng-if="post" />
+    <meta property="og:description" content="{{ post.excerpt }}" ng-if="post" />
+    <meta property="og:image" content="{{ post.urlImages.original }}" ng-if="post" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.corriente-alterna.com{{ $state.href($state.current.name) }}" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700" rel="stylesheet">
-    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"/>
+    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" />
 
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
@@ -59,155 +55,154 @@
     <!-- endinject -->
     <!-- endbuild -->
 </head>
+
 <body>
-<!--[if	lt	IE	8]>
+    <!--[if	lt	IE	8]>
 <p class="browsehappy">
     Estás usando un navegador <strong>desactualizado</strong>.
     Por favor <a href="http://browsehappy.com/">actualiza tu navegador</a>
     Para mejorar la experiencia..
 </p>
 <![endif]-->
-<header class="header">
-    <div class="navbar-info">
-        <div class="container">
-            <div class="col-sm-4 nav-info text-left">
-                <a href="tel:{{initConfig.phone}}"><i class="icon ion-ios-telephone-outline"></i> {{initConfig.phone}}</a>
-            </div>
-            <div class="col-sm-3 nav-info">
-                <a href="mailto:{{initConfig.email}}"><i class="icon ion-ios-email-outline"></i> {{initConfig.email}}</a>
-            </div>
-            <div class="col-sm-5 text-right" ng-controller="AccessCtrl as Access">
-                <a ui-sref="register" class="my-account" ng-if="!Access.isAuthenticated()">
-                    <i class="ion-ios-person-outline fa-2x"></i>
-                    Iniciar sesión
-                </a>
-                
-                <a class="my-account" ng-if="Access.isAuthenticated()">
-                    <i class="ion-ios-person-outline fa-2x" ui-sref="dashboard" title="Mi cuenta"></i>
-                    {{user.username}}
-                    <i ng-click="Access.logout()" data-toggle="tooltip" title="Cerrar sesión" class="fa fa-sign-out logout-ac"></i>
-                </a>
-                
-                <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce" ng-controller="AccessCtrl as Access">
-                    <span class="qty-cart">{{ items.length }}</span>
-                    <i class="icon ion-ios-cart-outline"></i> Carrito
-                </a>
+    <header class="header">
+        <div class="navbar-info">
+            <div class="container">
+                <div class="col-sm-3 col-md-4 nav-info ca-phone">
+                    <a href="tel:{{initConfig.phone}}"><i class="icon ion-ios-telephone-outline"></i> {{initConfig.phone}}</a>
+                </div>
+                <div class="col-sm-3 col-md-3 nav-info">
+                    <a href="mailto:{{initConfig.email}}"><i class="icon ion-ios-email-outline"></i> {{initConfig.email}}</a>
+                </div>
+                <div class="col-sm-6 col-md-5 ca-auth" ng-controller="AccessCtrl as Access">
+                    <a ui-sref="register" class="my-account" ng-if="!Access.isAuthenticated()">
+                        <i class="ion-ios-person-outline fa-2x"></i> Iniciar sesión
+                    </a>
+                    <a class="my-account" ng-if="Access.isAuthenticated()">
+                        <i class="ion-ios-person-outline fa-2x" ui-sref="dashboard" title="Mi cuenta"></i> {{user.username}}
+                        <i ng-click="Access.logout()" data-toggle="tooltip" title="Cerrar sesión" class="fa fa-sign-out logout-ac"></i>
+                    </a>
+                    <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce" ng-controller="AccessCtrl as Access">
+                        <span class="qty-cart">{{ items.length }}</span>
+                        <i class="icon ion-ios-cart-outline"></i><span class="hidden-xs">Carrito</span>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
-    <nav class="navbar navbar-default" ng-controller="NavBarCtrl as nav">
-        <div class="container container-tab">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target="#header-mainMenu" aria-expanded="false">
+        <nav class="navbar navbar-default" ng-controller="NavBarCtrl as nav">
+            <div class="container container-tab">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#header-mainMenu" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <div class="navbar-brand">
-                    <a ui-sref="home"><img src="img/logo.jpg" class="logo" alt="Corriente Alterna"></a>
-                    <a ui-sref="home"><img src="img/logo.jpg" class="logo-white" alt="Corriente Alterna"></a>
+                    <div class="navbar-brand">
+                        <a ui-sref="home"><img src="img/logo.jpg" class="logo" alt="Corriente Alterna"></a>
+                        <a ui-sref="home"><img src="img/logo.jpg" class="logo-white" alt="Corriente Alterna"></a>
+                    </div>
                 </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+
+                <div class="collapse navbar-collapse" id="header-mainMenu">
+                    <ul class="nav navbar-nav nav-main navbar-right">
+                        <!--<li ng-repeat="item in mainNavMenu">-->
+                        <li ng-repeat="item in mainNavMenu">
+                            <a href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
+
+                        </li>
+                    </ul>
+                </div>
+
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
+            <!-- /.navbar-collapse -->
 
-            <div class="collapse navbar-collapse" id="header-mainMenu">
-                <ul class="nav navbar-nav nav-main navbar-right">
-                    <!--<li ng-repeat="item in mainNavMenu">-->
-                    <li ng-repeat="item in mainNavMenu">
-                        <a href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
+        </nav>
+    </header>
+    <!-- end header top area -->
 
-                    </li>
-                </ul>
+    <div class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="container-pages" ui-view="content"></div>
             </div>
-
-        </div>
-        <!-- /.navbar-collapse -->
-
-    </nav>
-</header>
-<!-- end header top area -->
-
-<div class="content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="container-pages" ui-view="content"></div>
         </div>
     </div>
-</div>
 
-<footer id="footer_area">
-    <ng-include src="'/templates/partials/footer.html'"></ng-include>
-</footer>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEjGVa5h-ccW9wOy401EBhJXaEUogH0ZY"></script>
-<!-- build:js js/vendor.min.js -->
-<!-- bower:js -->
-<script src="lib/jquery/dist/jquery.js"></script>
-<script src="lib/angular/angular.js"></script>
-<script src="lib/angular-resource/angular-resource.js"></script>
-<script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-<script src="lib/angular-sanitize/angular-sanitize.js"></script>
-<script src="lib/bootstrap/dist/js/bootstrap.js"></script>
-<script src="lib/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-<script src="lib/owl.carousel/dist/owl.carousel.js"></script>
-<script src="lib/angular-deckgrid/angular-deckgrid.js"></script>
-<script src="lib/lightbox2/dist/js/lightbox.js"></script>
-<script src="lib/angular-animate/angular-animate.js"></script>
-<script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-<script src="lib/ng-repeat-owl-carousel/dist/ngRepeatOwlCarousel.min.js"></script>
-<script src="lib/angular-block-ui/dist/angular-block-ui.js"></script>
-<script src="lib/angular-toasty/dist/angular-toasty.js"></script>
-<script src="lib/angular-scroll/angular-scroll.js"></script>
-<script src="lib/angular-truncate/src/truncate.js"></script>
-<script src="lib/angular-touch/angular-touch.js"></script>
-<script src="lib/ngstorage/ngStorage.js"></script>
-<script src="lib/angular-simple-logger/dist/angular-simple-logger.js"></script>
-<script src="lib/lodash/lodash.js"></script>
-<script src="lib/markerclustererplus/src/markerclusterer.js"></script>
-<script src="lib/google-maps-utility-library-v3-markerwithlabel/dist/markerwithlabel.js"></script>
-<script src="lib/google-maps-utility-library-v3-infobox/dist/infobox.js"></script>
-<script src="lib/google-maps-utility-library-v3-keydragzoom/dist/keydragzoom.js"></script>
-<script src="lib/js-rich-marker/src/richmarker.js"></script>
-<script src="lib/angular-google-maps/dist/angular-google-maps.js"></script>
-<script src="lib/sweetalert/dist/sweetalert.min.js"></script>
-<script src="lib/ngSweetAlert/SweetAlert.js"></script>
-<script src="lib/satellizer/dist/satellizer.js"></script>
-<script src="lib/angular-messages/angular-messages.js"></script>
-<script src="lib/angular-ui-select/dist/select.js"></script>
-<script src="lib/ng-table/dist/ng-table.js"></script>
-<!-- endbower -->
-<!-- endbuild -->
-<!-- build:js js/annalise.min.js -->
-<!-- inject:js -->
-<script src="/js/app.js"></script>
-<script src="/js/controllers.js"></script>
-<script src="/js/custom.js"></script>
-<script src="/js/directives.js"></script>
-<script src="/js/filters.js"></script>
-<script src="/js/services.js"></script>
-<script src="/js/templates.js"></script>
-<script src="/js/translate.js"></script>
-<script src="/js/auth/auth.app.js"></script>
-<script src="/js/auth/controllers.js"></script>
-<script src="/js/auth/directives.js"></script>
-<script src="/js/auth/services.js"></script>
-<script src="/js/shop/controllers.js"></script>
-<script src="/js/shop/services.js"></script>
-<script src="/js/shop/shop.app.js"></script>
-<!-- endinject -->
-<!-- endbuild -->
-<script>(function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-    a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-    a.async = 1;
-    a.src = g;
-    m.parentNode.insertBefore(a, m)
-})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');</script>
-<toasty></toasty>
+    <footer id="footer_area">
+        <ng-include src="'/templates/partials/footer.html'"></ng-include>
+    </footer>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEjGVa5h-ccW9wOy401EBhJXaEUogH0ZY"></script>
+    <!-- build:js js/vendor.min.js -->
+    <!-- bower:js -->
+    <script src="lib/jquery/dist/jquery.js"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular-resource/angular-resource.js"></script>
+    <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="lib/angular-sanitize/angular-sanitize.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="lib/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+    <script src="lib/owl.carousel/dist/owl.carousel.js"></script>
+    <script src="lib/angular-deckgrid/angular-deckgrid.js"></script>
+    <script src="lib/lightbox2/dist/js/lightbox.js"></script>
+    <script src="lib/angular-animate/angular-animate.js"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="lib/ng-repeat-owl-carousel/dist/ngRepeatOwlCarousel.min.js"></script>
+    <script src="lib/angular-block-ui/dist/angular-block-ui.js"></script>
+    <script src="lib/angular-toasty/dist/angular-toasty.js"></script>
+    <script src="lib/angular-scroll/angular-scroll.js"></script>
+    <script src="lib/angular-truncate/src/truncate.js"></script>
+    <script src="lib/angular-touch/angular-touch.js"></script>
+    <script src="lib/ngstorage/ngStorage.js"></script>
+    <script src="lib/angular-simple-logger/dist/angular-simple-logger.js"></script>
+    <script src="lib/lodash/lodash.js"></script>
+    <script src="lib/markerclustererplus/src/markerclusterer.js"></script>
+    <script src="lib/google-maps-utility-library-v3-markerwithlabel/dist/markerwithlabel.js"></script>
+    <script src="lib/google-maps-utility-library-v3-infobox/dist/infobox.js"></script>
+    <script src="lib/google-maps-utility-library-v3-keydragzoom/dist/keydragzoom.js"></script>
+    <script src="lib/js-rich-marker/src/richmarker.js"></script>
+    <script src="lib/angular-google-maps/dist/angular-google-maps.js"></script>
+    <script src="lib/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="lib/ngSweetAlert/SweetAlert.js"></script>
+    <script src="lib/satellizer/dist/satellizer.js"></script>
+    <script src="lib/angular-messages/angular-messages.js"></script>
+    <script src="lib/angular-ui-select/dist/select.js"></script>
+    <script src="lib/ng-table/dist/ng-table.js"></script>
+    <!-- endbower -->
+    <!-- endbuild -->
+    <!-- build:js js/annalise.min.js -->
+    <!-- inject:js -->
+    <script src="/js/app.js"></script>
+    <script src="/js/controllers.js"></script>
+    <script src="/js/custom.js"></script>
+    <script src="/js/directives.js"></script>
+    <script src="/js/filters.js"></script>
+    <script src="/js/services.js"></script>
+    <script src="/js/templates.js"></script>
+    <script src="/js/translate.js"></script>
+    <script src="/js/auth/auth.app.js"></script>
+    <script src="/js/auth/controllers.js"></script>
+    <script src="/js/auth/directives.js"></script>
+    <script src="/js/auth/services.js"></script>
+    <script src="/js/shop/controllers.js"></script>
+    <script src="/js/shop/services.js"></script>
+    <script src="/js/shop/shop.app.js"></script>
+    <!-- endinject -->
+    <!-- endbuild -->
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    </script>
+    <toasty></toasty>
 </body>
+
 </html>
